--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -1,10 +1,5 @@
 {
-    "driverName": 0,
-        "_help": "0: F. Lastname, 1: Firstname L.",
-
-    "lapReview": 1,
-        "_help": "0: Always Off, 1: Only Quali, 2: Always On",
-
-    "lapReviewDelay": 5000,
-        "_help": "The time to display the Lap Review Alert in miliseconds"
+  "driverName": 0,
+  "lapReview": 1,
+  "lapReviewDelay": 5000
 }
