--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,5 +3,9 @@ repos:
   rev: v4.3.0
   hooks:
   - id: check-json
+    types: [file]  # override `types: [json]`
+    files: \.(djson|ledsprofile)$
   - id: pretty-format-json
     args: [--autofix]
+    types: [file]  # override `types: [json]`
+    files: \.(djson|ledsprofile)$
