--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -1,8 +1,8 @@
 {
-    "yourName": "Constantinos",
+    "yourName": "",
         "yourName_help": "F. Lastname (optional)",
 
-    "yourNumber": "33",
+    "yourNumber": "",
         "yourNumber_help": "Your Number (optional)",
 
     "yourColor": "",
@@ -29,7 +29,7 @@
     "showFlags": 0,
         "showFlags_help": "0: Show Flags, 1: Hide Flags",
 
-    "mapType": 1,
+    "mapType": 0,
         "mapType_help": "0: Static, 1: Animated",
 
     "uiMode": 2,
