--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -12,12 +12,12 @@
         "driverName_help": "0: F. Lastname, 1: Firstname L.",
 
     "lapReview": 1,
-        "lapReview_help": "0: Always Off, 1: Only Quali, 2: Always On",
+        "lapReview_help": "0: Always Off, 1: Only Quali & Prcatice, 2: Always On",
 
     "lapReviewDelay": 2500,
-        "lapReviewDelay_help": "The time to display the Lap Review Alert in miliseconds",
+        "lapReviewDelay_help": "The time to display the Lap Review in miliseconds",
 
-    "alertView": 1,
+    "alertView": 0,
         "alertsView_help": "0: Normal, 1: Mini, 2: Off",
 
     "alertDelay": 1000,
