--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -1,38 +1,44 @@
 {
-    "yourName": "",
-        "yourName_help": "F. Lastname (optional)",
+  "yourName": "",
+      "yourName_help": "F. Lastname (optional)",
 
-    "yourNumber": "",
-        "yourNumber_help": "Your Number (optional)",
+  "yourNumber": "",
+      "yourNumber_help": "Your Number (optional)",
 
-    "yourColor": "",
-        "yourColor_help": "Red, Blue, #2B98FB (default)",
+  "yourColor": "",
+      "yourColor_help": "Red, Blue, #2B98FB (default)",
 
-    "driverName": 0,
-        "driverName_help": "0: F. Lastname, 1: Firstname L.",
+  "driverName": 0,
+      "driverName_help": "0: F. Lastname, 1: Firstname L.",
 
-    "lapReview": 1,
-        "lapReview_help": "0: Always Off, 1: Only Quali & Prcatice, 2: Always On",
+  "lapReview": 1,
+      "lapReview_help": "0: Always Off, 1: Only Quali & Prcatice, 2: Always On",
 
-    "lapReviewDelay": 2500,
-        "lapReviewDelay_help": "The time to display the Lap Review in miliseconds",
+  "lapReviewDelay": 2500,
+      "lapReviewDelay_help": "The time to display the Lap Review in miliseconds",
 
-    "alertView": 0,
-        "alertsView_help": "0: Normal, 1: Mini, 2: Off",
+  "alertView": 0,
+      "alertsView_help": "0: Normal, 1: Mini, 2: Off",
 
-    "alertDelay": 1000,
-        "alertDelay_help": "The time to display the Alerts in miliseconds",
+  "alertDelay": 1000,
+      "alertDelay_help": "The time to display the Alerts in miliseconds",
 
-    "clutchMode": 1,
-        "clutchMode_help": "0: Always Off, 1: Show when engaged, 2: Always On",
+  "clutchMode": 1,
+      "clutchMode_help": "0: Always Off, 1: Show when engaged, 2: Always On",
 
-    "showFlags": 0,
-        "showFlags_help": "0: Show Flags, 1: Hide Flags",
+  "showFlags": 0,
+      "showFlags_help": "0: Show Flags, 1: Hide Flags",
 
-    "mapType": 0,
-        "mapType_help": "0: Static, 1: Animated",
+  "mapType": 0,
+      "mapType_help": "0: Static, 1: Animated",
 
-    "uiMode": 2,
-        "uiMode_help": "0: Low, 1: Medium, 2: High"
+  "uiMode": 2,
+      "uiMode_help": "0: Low, 1: Medium, 2: High",
+
+  "uiRadius": 45,
+      "uiRadius_help": "45: Pixel Radius of outer corners, suggested size Min:12, Max:50",
+
+  "nightMode": 1,
+      "nightMode_help": "0: Off, 1: On"
 
 }
