--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -9,7 +9,10 @@
       "yourColor_help": "Red, Blue, #2B98FB (default)",
 
   "driverName": 0,
-      "driverName_help": "0: F. Lastname, 1: Firstname L.",
+      "driverName_help": "0: F. Lastname, 1: Firstname L., 2: Firstname Lastname",
+
+  "lfmID": "",
+      "lfmID_help": "Your LFM ID, can be found in the URL of your profile page",
 
   "lapReview": 1,
       "lapReview_help": "0: Always Off, 1: Only Quali & Prcatice, 2: Always On",
@@ -36,7 +39,7 @@
       "uiMode_help": "0: Low, 1: Medium, 2: High",
 
   "uiRadius": 45,
-      "uiRadius_help": "45: Pixel Radius of outer corners, suggested size Min:12, Max:50",
+      "uiRadius_help": "Pixel Radius of outer corners, suggested size Min:12, Max:50",
 
   "nightMode": 1,
       "nightMode_help": "0: Off, 1: On"
