--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -45,6 +45,9 @@
         "uiRadius_help": "Pixel Radius of outer corners, Suggested Min:12, Max:50",
 
     "nightMode": 1,
-        "nightMode_help": "0: Off, 1: On"
+        "nightMode_help": "0: Off, 1: On",
+
+    "tireLapAvg": 2,
+        "tireLapAvg_help": "2: Set the number of last laps to record data"
 
 }
