--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -48,6 +48,9 @@
         "nightMode_help": "0: Off, 1: On",
 
     "tireLapAvg": 2,
-        "tireLapAvg_help": "2: Set the number of last laps to record data"
+        "tireLapAvg_help": "2: Set the number of last laps to record data",
+
+    "tireLapAvgResetKey": "h",
+        "tireLapAvgResetKey_help": "BETA: Set the hot key to reset your Tire AVG data - Use with caution, may freeze data collection"
 
 }
