--- a/Lovely-Dashboard_settings.json
+++ b/Lovely-Dashboard_settings.json
@@ -94,7 +94,7 @@
             "activeRightMFM_help": "4,5,6,8 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
 
         "activeCentralMFM": "",
-            "activeCentralMFM_help": "0,1,2 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
+            "activeCentralMFM_help": "0,1,2,3 - Select which available MFMs to activate in the Dashboard - Leave blank for all, 0: Quali, 1: Race, 2: PC Time, 3: Speedometer",
 
         "leftMFM": 4,
             "leftMFM_help": "0: Lap Times, 1: Sectors, 2: Relative, 3: Standings, 4: Tires, 5: Tire AVG, 6: Damage, 8: Map, 9: Opponents",
@@ -122,7 +122,7 @@
             "activeRightMFM_help": "4,5,6,8 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
 
         "activeCentralMFM": "",
-            "activeCentralMFM_help": "0,1,2 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
+        "activeCentralMFM_help": "0,1,2,3 - Select which available MFMs to activate in the Dashboard - Leave blank for all, 0: Quali, 1: Race, 2: PC Time, 3: Speedometer",
 
         "leftMFM": 4,
             "leftMFM_help": "0: Lap Times, 1: Sectors, 2: Relative, 3: Standings, 4: Tires, 5: Tire AVG, 6: Damage, 8: Map, 9: Opponents",
@@ -150,7 +150,7 @@
             "activeRightMFM_help": "4,7,8 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
  
         "activeCentralMFM": "",
-            "activeCentralMFM_help": "0,1,2 - Select which available MFMs to activate in the Dashboard - Leave blank for all",  
+            "activeCentralMFM_help": "0,1,2,3 - Select which available MFMs to activate in the Dashboard - Leave blank for all, 0: Quali, 1: Race, 2: PC Time, 3: Speedometer",
 
         "leftMFM": 7,
             "leftMFM_help": "0: Lap Times, 1: Sectors, 2: Relative, 3: Standings, 4: Tires, 7: Status, 8: Map, 9: Opponents",
@@ -178,7 +178,7 @@
             "activeRightMFM_help": "4,5,7,8 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
     
         "activeCentralMFM": "",
-            "activeCentralMFM_help": "0,1,2 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
+            "activeCentralMFM_help": "0,1,2,3 - Select which available MFMs to activate in the Dashboard - Leave blank for all, 0: Quali, 1: Race, 2: PC Time, 3: Speedometer",
 
         "leftMFM": 4,
             "leftMFM_help": "0: Lap Times, 1: Sectors, 2: Relative, 3: Standings, 4: Tires, 5: Tire AVG, 7: Status, 8: Map, 9: Opponents",
@@ -206,7 +206,7 @@
             "activeRightMFM_help": "4,5,8 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
     
         "activeCentralMFM": "",
-            "activeCentralMFM_help": "0,1,2 - Select which available MFMs to activate in the Dashboard - Leave blank for all",
+            "activeCentralMFM_help": "0,1,2,3 - Select which available MFMs to activate in the Dashboard - Leave blank for all, 0: Quali, 1: Race, 2: PC Time, 3: Speedometer",
 
         "leftMFM": 4,
             "leftMFM_help": "0: Lap Times, 1: Sectors, 2: Relative, 3: Standings, 4: Tires, 5: Tire AVG, 8: Map, 9: Opponents",
